# numby

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  build.sh  config.json  install.sh  schema.json
.cargo/: config.toml
.github/: FUNDING.yml
.github/workflows/: release.yml
Android/: .gitignore  settings.gradle.kts
Android/app/: build.gradle.kts  proguard-rules.pro
Android/app/src/main/: AndroidManifest.xml
Android/gradle/: libs.versions.toml
Formula/: numby.rb
Numby/Numby/: AppDelegate.swift  Numby-Bridging-Header.h  Numby.entitlements  NumbyWrapper.swift  Persistence.swift  TabBarSidebarLayout.md  libnumby.h  main.swift
Numby/Numby.xcodeproj/: project.pbxproj
Numby/Numby.xcodeproj/xcshareddata/xcschemes/: Numby Pro.xcscheme  Numby.xcscheme
Numby/Numby/Assets.xcassets/AppIcon.appiconset/: Contents.json
Numby/Numby/Core/: CLIInstaller.swift  CLIInstallerView.swift  CalculationSession+Extensions.swift  CalculatorImageRenderer.swift  Configuration.swift  FileHandler.swift  FocuslessHosting.swift  MainSplitViewController.swift  NSView+Extensions.swift  NotificationNames.swift  ShareURLGenerator.swift  SplitTree.swift  SplitView.swift  StoneNameGenerator.swift  Theme.swift  ThemeData.swift  WindowManager.swift
Numby/Numby/Features/Calculator/: CalculatorController.swift  CalculatorRootView.swift  CalculatorSurfaceView.swift
Numby/Numby/Numby.xcdatamodeld/: .xccurrentversion
Numby/Numby/be.lproj/: Localizable.strings
Numby/Numby/de.lproj/: Localizable.strings
Numby/Numby/en.lproj/: Localizable.strings
Numby/Numby/es.lproj/: Localizable.strings
Numby/Numby/fr.lproj/: Localizable.strings
Numby/Numby/iOS/: UIColor+Extensions.swift
Numby/Numby/ja.lproj/: Localizable.strings
Numby/Numby/ru.lproj/: Localizable.strings
Numby/Numby/zh-Hans.lproj/: Localizable.strings
Numby/Numby/zh-Hant.lproj/: Localizable.strings
Numby/NumbyTests/: NumbyTests.swift
Numby/NumbyUITests/: NumbyUITests.swift  NumbyUITestsLaunchTests.swift
Numby/libnumby.xcframework/: Info.plist
NumbyTests/: NumbyTests.swift
bucket/: numby.json
examples/: arithmetic.numby  basic.numby  complex.numby  conversions.numby
locales/be/: errors.ftl  evaluator.ftl  main.ftl  security.ftl  tui.ftl
locales/de/: errors.ftl  evaluator.ftl  main.ftl  security.ftl  tui.ftl
locales/en-US/: errors.ftl  evaluator.ftl  main.ftl  security.ftl  tui.ftl
locales/es/: errors.ftl  evaluator.ftl  main.ftl  security.ftl  tui.ftl
locales/fr/: errors.ftl  evaluator.ftl  main.ftl  security.ftl  tui.ftl
locales/ja/: errors.ftl  evaluator.ftl  main.ftl  security.ftl  tui.ftl
locales/ru/: errors.ftl  evaluator.ftl  main.ftl  security.ftl  tui.ftl
locales/zh-CN/: errors.ftl  evaluator.ftl  main.ftl  security.ftl  tui.ftl
locales/zh-TW/: errors.ftl  evaluator.ftl  main.ftl  security.ftl  tui.ftl
src/: android_jni.rs  cli.rs  config.rs  conversions.rs  currency_fetcher.rs  i18n.rs  lib.rs  main.rs  models.rs  parser.rs  prettify.rs  security.rs  utils.rs
src/evaluator/: cache.rs  core.rs  error.rs  events.rs  mod.rs  preprocessing.rs
src/evaluator/agents/: datetime.rs  history.rs  math.rs  mod.rs  percentage.rs  unit.rs  variable.rs
src/tui/: input.rs  mod.rs  render.rs  syntax.rs
tests/: cli_tests.rs  currency_api_integration.rs  localization_integration.rs
web/: README.md  build.ts  package.json
web/scripts/: export-themes.ts
web/src/: App.tsx  Eula.tsx  Privacy.tsx  eula-frontend.tsx  eula.html  index.html  index.ts  install.sh  privacy-frontend.tsx  privacy.html  robots.txt  s-frontend.tsx  s.html  share.html  sitemap.xml  themes.json
web/src/api/: og.ts
web/src/components/: FAQSection.tsx
web/src/i18n/: LanguageContext.tsx  LanguageSelector.tsx  i18n.ts
web/src/lib/: highlight.ts  share.ts  types.ts
web/src/pages/: Share.tsx
(+60 files in other folders)
