[package]
name = "numby"
version = "0.1.1"
edition = "2021"
description = "A powerful natural language calculator with a terminal user interface"
repository = "https://github.com/vivy-company/numby"
license = "MIT"
keywords = ["calculator", "cli", "tui", "natural-language", "math"]
categories = ["command-line-utilities", "mathematics"]

[lib]
name = "numby"
path = "src/lib.rs"
crate-type = ["lib", "staticlib"]

[[bin]]
name = "numby"
path = "src/main.rs"

[dependencies]
ratatui = "0.26"
crossterm = "0.27"
regex = "1.10"
fasteval2 = "2.1"
ropey = "1.6"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
arboard = "3.4"
nu-ansi-term = "0.50"
clap = { version = "4.0", features = ["derive"] }
thiserror = "1.0"
anyhow = "1.0"
lazy_static = "1.4"
dirs = "5.0"
fluent-bundle = "0.15"
fluent-templates = "0.10"
unic-langid = "0.9"
once_cell = "1.19"
ureq = { version = "2.10", features = ["json"] }

[dev-dependencies]
approx = "0.5"

# Default release profile with LTO disabled to allow custom profiles to override
# This profile serves as base configuration - use release-lib or release-cli instead
[profile.release]
opt-level = 3
lto = false  # Disabled here so child profiles can enable it independently
codegen-units = 1
panic = "abort"
strip = true

# Size-optimized profile for staticlib (macOS app)
# Minimizes binary size for embedding in app bundle
# Use: RUSTFLAGS="-C embed-bitcode=no" cargo build --profile release-lib --lib
# Note: LTO disabled for lib because embed-bitcode=no conflicts with LTO
[profile.release-lib]
inherits = "release"
opt-level = "z"  # Optimize for size
lto = false      # Disabled because embed-bitcode=no conflicts with LTO
codegen-units = 1
strip = true

# Performance-optimized profile for CLI binary
# Maximizes runtime performance for standalone CLI
# Use: cargo build --profile release-cli --bin numby
[profile.release-cli]
inherits = "release"
opt-level = 3    # Optimize for speed
lto = true       # Enable LTO for better optimization
codegen-units = 1
strip = true
